# wolf

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  genindex.html  graphics.pptx  index.html  objects.inv  package.json  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/development/contributing/: internals.doctree  workflow.doctree
.doctrees/modules/: analysis.doctree  data.doctree  utils.doctree
.github/: release.yml
.github/workflows/: changelog-ci.yml  ci.yaml  deploy.yaml  documentation.yaml
_sources/: index.rst.txt
_sources/modules/: analysis.rst.txt  data.rst.txt
development/contributing/: internals.html  workflow.html
docs/report/: report.css  report.html  report_module.py  template.html
docs/source/: conf.py  index.rst
docs/source/development/contributing/: internals.rst  workflow.rst
docs/source/modules/: analysis.rst  data.rst  utils.rst
example/: load_and_visualize.ipynb
modules/: analysis.html  data.html  utils.html
src/generic/analysis/: basics.py
src/generic/data/: __init__.py
src/generic/utils/: conversions.py
src/wolf/: __init__.py
src/wolf/analysis/: basics.py
src/wolf/data/: io.py
src/wolf/utils/: mechanics.py  track_mechanics.py
tests/sw_tests/analysis/: test_basics.py
